fixed an issue seen while using later version of node.js (17.0.1) where webpack throws a digital envelop error

--- a/LibReactComponentsStarter/package.json
+++ b/LibReactComponentsStarter/package.json
@@ -3,10 +3,10 @@
   "name": "aspnetcoremvc-jquery-to-react",
   "private": true,
   "scripts": {
-    "prod": "npm run typescheck && webpack --mode=production",
-    "dev": "npm run typescheck && webpack --mode=development",
+    "prod": "npm run typescheck && SET NODE_OPTIONS=--openssl-legacy-provider && webpack --mode=production",
+    "dev": "npm run typescheck && SET NODE_OPTIONS=--openssl-legacy-provider && webpack --mode=development",
     "test": "npm run typescheck && jest",
-    "devw": "npm run tscwatch -- --onSuccess \"webpack --mode=development\"",
+    "devw": "npm run tscwatch -- --onSuccess \"SET NODE_OPTIONS=--openssl-legacy-provider && webpack --mode=development\"",
     "testw": "npm run tscwatch -- --onSuccess jest",
     "tscwatch": "tsc-watch -p ./tsconfig.bld.json",
     "typescheck": "tsc -p ./tsconfig.bld.json",
