JS build config files are no longer copied to output; added jest coverage script and jest config in package.json; typescript intellisense ignores bin folder now; installed typescript msbuild nuget purely to remove a VS warning--msbuild is not building typescript, babel is via the npm build script in package.json

--- a/LibReactComponentsStarter/tsconfig.json
+++ b/LibReactComponentsStarter/tsconfig.json
@@ -10,5 +10,5 @@
     "module": "ES2015",
     "moduleResolution": "Node"
   },
-  "exclude": [ "wwwroot/app/dist/**/*" ]
+  "exclude": [ "wwwroot/app/dist/**/*", "bin/**/*" ]
 }
