--- a/LibReactComponentsStarter/package.json
+++ b/LibReactComponentsStarter/package.json
@@ -8,6 +8,7 @@
     "test": "npm run typescheck && jest",
     "devw": "npm run tscwatch -- --onSuccess \"webpack --mode=development\"",
     "testw": "npm run tscwatch -- --onSuccess jest",
+    "testc": "npm run typescheck && jest --coverage",
     "tscwatch": "tsc-watch -p ./tsconfig.bld.json",
     "typescheck": "tsc -p ./tsconfig.bld.json",
     "typesemit": "tsc -p ./tsconfig.dts.json",
@@ -18,6 +19,10 @@
   "browserslist": [
     "defaults"
   ],
+  "jest": {
+    "collectCoverageFrom": [ "wwwroot/app/src/**/*", "!**/__snapshots__/**" ],
+    "coverageDirectory": "<rootDir>/node_modules/_jest-coverage-reports"
+  },
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2"
