ensure node_modules folder is exlcuded from solution explorer

--- a/LibReactComponentsStarter/LibReactComponentsStarter.csproj
+++ b/LibReactComponentsStarter/LibReactComponentsStarter.csproj
@@ -6,6 +6,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<TypeScriptCompile Remove="node_modules\**" />
+	</ItemGroup>
+	<ItemGroup>
 		<Content Remove="wwwroot\app\src\**" />
 		<None Include="wwwroot\app\src\**" />
 	</ItemGroup>
