files in the specified directory of this added TypeScriptCompile element should not be designated for TypeScript compilation--a separate build tool handles this

--- a/LibReactComponentsStarter/LibReactComponentsStarter.csproj
+++ b/LibReactComponentsStarter/LibReactComponentsStarter.csproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<TypeScriptCompile Remove="wwwroot\app\src\**" />
 		<TypeScriptCompile Remove="node_modules\**" />
 	</ItemGroup>
 	<ItemGroup>
